# cs-nano-demos

./: .gitignore  README.md
.obsidian/: app.json  workspace
LIT-exercises/: README.md
Tinylang/: CMakeLists.txt  README.md
_backend/server/: README.md  server.py
_frontend/dom/: README.md  side_effect.md
_frontend/router/: README.md  server.py
_huawei_kexin/: leetcode2731.md
_huawei_kexin/src/: leetcode187.cpp
algorithm/a-star/: README.md
algorithms-data-structure-cpp/: README.md
algorithms-data-structure-cpp/00 - basic/: README.md
apache101/: README.md
arch2001-labs/: README.md  a.out
arch2001-labs/APIC/: README.md
arch2001-labs/MSRs/: k_MSRs.c  u_MSRs.c
arch2001-labs/U_SegRegs/: U_SegRegs.c  a.out
arch2001_x86_64/: a.out  sigaction.c  signal.c  signal.md  u_msr.c  u_msr.md
baiwen-gcc-llvm/: README.md
bash101/: README.md  case.sh
byte-alignment-of-x86_64_runtime_stack/: README.md
c-cxx-calling-convention/: mangling.c  mangling.s
c-language/shared_library/: a.out  sigaction.c  sigaction.md  signal.c  signal.md
c/c-compiler/: README.md
c/c-cxx-calling-convention/: mangling.c
c/check-if-directory-exist/: a.out  main.c
c/cmake-c-macros/: run.sh
cmake-c-macros/: CMakeLists.txt  build.sh  hello_world  main.cpp
cmake-exercises/: README.md
cmake-exercises/cmake-source-dir/: CMakeLists.txt  README.md
cmake-exercises/cmake-source-dir/sub1/: Makefile
cmake101/: README.md
cpp-primer/: README.md
cpp-simd/: .gitignore  README.md  a.out
cpp-static-analysis/: README.md
cs-csapp/: README.md
cs-jargon/: README.md
cs242-programming-languages/: README.md
csapp/: README.md
cscd70-compiler-optimization/: notes.md
cscd70-compiler-optimization/assignment1-intro-llvm/FunctionInfo/: CMakeLists.txt
cscd70-compiler-optimization/assignment1-intro-llvm/FunctionInfo/lib/: CMakeLists.txt  Makefile
cscd70-compiler-optimization/assignment1-intro-llvm/FunctionInfo/test/: .lit_test_times.txt  Fibonacci.c  Fibonacci.c.ll  Loop.c  Loop.c.ll  Makefile  lit.cfg.in.py  lit.cfg.py
database101/: README.md
decaf-compiler/: README.md
docker101/: README.md  dockerfile.md  namespace.md  ram.md
fastcode101/: README.md
frontend/: README.md
geph/: README.md
linux101/: README.md
llvm-codegen-pass-stack/: README.md
llvm-exercises/: README.md
llvm-exercises/legacy-pass-manager/llvm-transform-helloworld/: CMakeLists.txt  README.md
llvm-exercises/legacy-pass-manager/llvm-transform-helloworld/Hello/: CMakeLists.txt  Hello.cpp
llvm-exercises/llvm-helloworld/: CMakeLists.txt
llvm-exercises/llvm-helloworld/HelloWorld/test/: main.bc  main.cpp
llvm-exercises/llvm-tutor/: CMakeLists.txt
llvm-exercises/llvm-tutor/HelloWorld/: CMakeLists.txt  Makefile
llvm-exercises/llvm-tutor/HelloWorld/test/: main.bc  mainOpt.bc
llvm-hello/: README.md
llvm-hello-world/: CMakeLists.txt  README.md
llvm-hello-world-backend/: LLVM_ lib_Support_Host.cpp Source File.html  README.md  X86HelloWorld.md  example_for_call_count.c  example_for_call_count.s
llvm-hello-world/Examples/: README.md  example_for_call_count.c  example_for_call_count.ll  example_for_cc.bc  example_for_cc.ll  example_for_fcmp_eq.cpp  example_for_inject_function_call.c  example_for_inject_function_call.ll  example_for_mba_sub.cpp  example_for_mba_sub.ll  example_for_remove_functions.c  example_for_remove_functions.cpp  example_mba_sub.cpp
llvm-hello-world/HelloWorld/: CMakeLists.txt  HelloLegacy.cpp  HelloNew.cpp  README.md  RemoveUnreachableFunctionsOLD.cpp
llvm-hello-world/LLVM_Core_Libraries_Book/: sum.bc  sum.ll  sum_ll_without_builder.cpp  sum_tmp.bc  sum_tmp.ll
llvm-hello-world/LLVM_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  RemoveUnreachableFunctionsOLD.cpp
llvm-hello-world/docs/: write_llvm_ir_generator.md
llvm-hello-world/include/: FindFCmpEq.h  InjectFuncCall.h  MBASub.h  OpcodeCounter.h  RIV.h  StaticCallCounter.h
llvm-hello-world/lib/: CMakeLists.txt  DynamicCallCounter.cpp  FindFCmpEq.cpp  InjectFuncCall.cpp  MBASub.cpp  OpcodeCounter.cpp  RIV.cpp  RemoveUnreachableFunctions.cpp  StaticCallCounter.cpp
llvm-hello-world/test/output/: a_plus_b_simple_addition.bc
llvm-hello-world/test_py/: hello.bc  hello.cpp  runTest.py
llvm-hello/lib/: CMakeLists.txt
llvm-hello/lib/Analysis/: CMakeLists.txt  DynamicCallCounter.cpp  StaticCallCounter.cpp
llvm-hello/lib/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
llvm-hello/lib/Transforms/: InjectFuncCall.cpp
llvm-hello/lib/Transforms /: InjectFuncCall.cpp  MBASub.cpp
llvm-pass-manager/: CMakeLists.txt  README.md  example_for_call_count.ll
llvm-x86-compiler/: HelloWorld.asm  HelloWorld.ll  HelloWorld.s  README.md  a.out
llvm101/llvm-analysis-pass-legacy-pm/lib/: Analysis.h  CMakeLists.txt  Transform.cpp
llvm101/llvm-skeleton-pass-new-pm/: .clangd  CMakeLists.txt  Makefile  README.md
llvm101/llvm-skeleton-pass-new-pm/examples/: a.out  for_bar.c  run.sh
llvm101/llvm-skeleton-pass-new-pm/lib/: CMakeLists.txt  HelloWorld.cpp  Makefile  libHelloWorldPass.dylib
llvm101/llvm-tutor-notes/lib/Transforms/: CMakeLists.txt
nano-computer-system/: README.md
network-se/: README.md
node101/: README.md
numerical-method/: root-finding.md
react-exercises/: .gitignore  README.md
redis101/: README.md
riscv-llvm-backend/: README.md
seven-days-seven-languages/: README.md  ruby-day1.md  ruby-day2.md  ruby-day3.md  ruby-summary.md
sgx-lkl-oe-calloc-stress/: Dockerfile  Makefile  README.md  a.out
sicp/: README.md
spider/: beautiful_soup.md  bs.py  guardian_Christchurch_shooting.json  guardians_articles_Christchurch_shooting.md  guardians_articles_Christchurch_shooting_1_164.md  json_reader.py
trie/: CMakeLists.txt  Makefile  README.md  Trie.cpp  Trie.h  a.out  test-en-words.cpp  test-openssl-lib.cpp  test.cpp  trie-test
trie/test/: Trie_LeetCode.cpp
type-py/: README.md
typescript-type-gym/: README.md
x86-instructions/: addressing_mode.c
your-own-TinyLang-compiler/: README.md
your-own-c-compiler/: README.md
your-own-pascal-compiler/: README.md
your-own-scheme-compiler/: README.md
(+199 files in other folders)
